ensure shleemy has correct column names